--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Bookstore_lwz)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Bookstore_lwz main.cpp)
+add_executable(Bookstore_lwz
+        main.cpp
+        user_data.cpp)
