--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Bookstore_lwz
         main.cpp
+        ./StanfordCPPLib/tokenscanner.cpp
+        ./StanfordCPPLib/error.cpp
+        ./StanfordCPPLib/strlib.cpp
         user_data.cpp
         book_data.cpp
         bookname_processor.cpp
