rename the executable as code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Bookstore_lwz)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Bookstore_lwz
+add_executable(code
         main.cpp
         ./StanfordCPPLib/tokenscanner.cpp
         ./StanfordCPPLib/error.cpp
