change the finance to file_stored

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(code
         key_processor.cpp
         key_file.cpp
         book_name_processor.cpp
-        author_processor.cpp)
+        author_processor.cpp
+        finance.cpp)
