--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,5 @@ add_executable(code
         author_processor.cpp
         finance.cpp
         worker.cpp
-        worker.h
-        log.cpp
-        log.h)
+        log.cpp)
+#        tokenscanner.cpp)
