remove the trace of StanfordCPPLib completely

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(code
         main.cpp
-        ./StanfordCPPLib/tokenscanner.cpp
-        ./StanfordCPPLib/error.cpp
-        ./StanfordCPPLib/strlib.cpp
         user_data.cpp
         book_data.cpp
         key_processor.cpp
@@ -16,5 +13,5 @@ add_executable(code
         author_processor.cpp
         finance.cpp
         worker.cpp
-        log.cpp)
-#        tokenscanner.cpp)
+        log.cpp
+        tokenscanner.cpp)
